kubernetes/apps/metrics/grafana/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: metrics-grafana-route
  namespace: traefik
spec:
  parentRefs:
    - name: cluster-edge-gateway
      namespace: traefik
  hostnames:
    - metrics.kwer.fr
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /grafana
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: strip-first-segment
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: metrics-basic-auth
      backendRefs:
        - name: grafana
          port: 80
          namespace: metrics
